--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Caras/
+    - assets/Caras2/
     - assets/textos/
   #   - images/a_dot_ham.jpeg
 
